<resources>
    <string name="app_name">Lockscreen Motivation</string>
    <string name="Details">Details</string>
    <string name="Date">Date</string>
    <string name="gate_2017"> </string>
    <string name="temporaryno">0</string>
    <string name="Today">Today</string>
    <string name="from_calendar">From Calendar</string>
    <string name="Title">Title</string>
    <string name="what_is_on_that_day_optional">What is on that day? (Optional)</string>
    <string name="show_title_in_widget">Show title in widget</string>
    <string name="Color">Color</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="title_activity_reposition">Reposition Widget</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="pick_color">Pick Color</string>
    <string name="shade">Shade</string>
    <string name="done">Done</string>
    <string name="change_background">Change Background</string>
    <string name="day_countdown_on_lockscreen">Day Countdown On Lockscreen</string>
    <string name="edit_widget">Edit Widget</string>
    <string name="show_on_lock_screen">Show on lock screen</string>
    <string name="setup_widget">Setup Widget</string>
    <string name="position_text_on_lockscreen">Position Text On Lockscreen</string>
    <string name="lockscreen_text">Lockscreen Text</string>
    <string name="position_quote_on_lockscreen">Position Quote On Lockscreen</string>
    <string name="show_quote_on_lockscreen">Show Quote On Lockscreen</string>
    <string name="show_a_new_quote_on_lockscreen_neach_time_you_see_lockscreen">Show a new quote on lockscreen \neach time you see lockscreen!</string>
    <string name="anonymous">- Anonymous</string>
    <string name="fall_seven_times_stand_up_eight">Fall seven times, stand up eight!</string>
    <string name="intro">Welcome to LockMotivation</string>
    <string name="app_description">Get motivated every time\nyou check your phone!</string>
    <string name="settings">Settings</string>
</resources>
