<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/topmostRL"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/textRL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temporaryno" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <com.todddavies.components.progressbar.ProgressWheel
            android:id="@+id/countdownPW"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            app:pwBarColor="@color/defaultPWBarColor"
            app:pwBarLength="60dp"
            app:pwBarWidth="5dp"
            app:pwRimColor="@color/grey_500"
            app:pwRimWidth="2dp"
            app:pwText="@string/temporaryno"
            app:pwTextColor="@color/white"
            app:pwTextSize="22sp" />

        <TextView
            android:id="@+id/textPW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/countdownPW"
            android:layout_centerHorizontal="true"
            android:text="@string/gate_2017"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/quoteRL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        tools:ignore="RelativeOverlap">

        <TextView
            android:id="@+id/mainTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fall_seven_times_stand_up_eight"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/authorTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/mainTV"
            android:layout_alignRight="@id/mainTV"
            android:layout_below="@id/mainTV"
            android:text="@string/anonymous"
            android:textColor="@color/white" />
    </RelativeLayout>

</RelativeLayout>