<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullscreen_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.urhive.lockscreendaycountdown.FullscreenActivity">

    <ImageView
        android:id="@+id/applyWallpaperIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/change_background"
        android:onClick="applyWallpaper"
        android:padding="10dp"
        android:src="@drawable/ic_more_vert_black_24dp"
        android:tint="@color/white"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/applyWallpaperIcon"
        android:contentDescription="@string/change_background"
        android:onClick="changeOrientation"
        android:padding="10dp"
        android:src="@drawable/ic_screen_rotation_black_24dp"
        android:tint="@color/white"
        tools:ignore="RtlHardcoded" />

    <RelativeLayout
        android:id="@+id/widgetRL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        tools:ignore="RelativeOverlap">

        <com.todddavies.components.progressbar.ProgressWheel
            android:id="@+id/countdownPW"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            app:pwBarColor="@color/defaultPWBarColor"
            app:pwBarLength="60dp"
            app:pwBarWidth="5dp"
            app:pwRimColor="#330097D6"
            app:pwRimWidth="2dp"
            app:pwText="@string/temporaryno"
            app:pwTextColor="@color/white"
            app:pwTextSize="22sp" />

        <TextView
            android:id="@+id/textPW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/countdownPW"
            android:layout_centerHorizontal="true"
            android:text="@string/gate_2017"
            android:textColor="@color/white" />
    </RelativeLayout>

    <TextView
        android:id="@+id/doneReposition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="done"
        android:padding="15dp"
        android:text="@string/done"
        android:textColor="@color/white" />
</RelativeLayout>
